moving of documents

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <section class="home">
   <nav id="navBar">
-    <p><a href="../html/index.html"><img src="../Images/Logo.png" alt="Amanda Noren Design Home" width="98" height="59.46"></a></p>
+    <p><a href="index.html"><img src="../Images/Logo.png" alt="Amanda Noren Design Home" width="98" height="59.46"></a></p>
     <div id="navigation">
       <p><a href="#">Projects</a></p>
       <p><a href="../html/about.html">About Me</a></p>
