--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="../CSS/style.css" type="text/css" rel="stylesheet">
+  <link href="CSS/style.css" type="text/css" rel="stylesheet">
   <title>Amanda Noren UX Design</title>
   <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Basic&family=Pacifico&display=swap" rel="stylesheet"> 
 </head>
