--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     </div>
     </nav>
   <div class="container">
-    <img src="../Images/Name Bkg.png" width= 781px height= 222px>
+    <img src="Images/Name Bkg.png" width= 781px height= 222px>
     <p class="centered">Hi! I'm Amanda</p>
     <p class= "under"> Storyteller, UX/UI Designer, Amateur Crafter</p>
   </div>
   <div class="container" class="tupperware">
-    <img src="../Images/Button.png" width=256px height=60px>
+    <img src="Images/Button.png" width=256px height=60px>
     <button type="button" class="middle">Let's chat!</button>
   </div>
   <div class="heroImg">
-    <img src="../Images/Scene.png" width= 100% height= 200%>
+    <img src="Images/Scene.png" width= 100% height= 200%>
     <p class="bottomLeft">Not every story is about castles and far away lands, in fact, those aren't even my favorite stories to tell. In fact, here's a story about an animal rescue and how their KPI's improve with an updated User Interface:</p>
   </div>
   <div class= "caseName">
@@ -40,7 +40,7 @@
   </div>
   <div class= "container" class="box-collection">
     <div class="container" class="banner">
-    <img src="../Images/Banner.png" width=484.2px height=177.3px></div>
+    <img src="Images/Banner.png" width=484.2px height=177.3px></div>
     <p class="align">Research</p> </div>
     <div class= "research-content1"width=467px height=593px>
         <p>Research Content 1</p> </div>
